[gd_scene load_steps=10 format=3 uid="uid://m81ufn3lj7wy"]

[ext_resource type="Script" path="res://Scenes/mini_games/Bulletin Board/bulletin_board_game.gd" id="1_i8dud"]
[ext_resource type="Script" path="res://Scenes/mini_games/Bulletin Board/letter.gd" id="2_nxvow"]
[ext_resource type="Texture2D" uid="uid://dcm6p18p7lslf" path="res://Assets/Sprites/generic_items/genericItem_color_160.png" id="3_vliwk"]
[ext_resource type="Script" path="res://Scenes/mini_games/Bulletin Board/spot.gd" id="4_uq88t"]

[sub_resource type="LabelSettings" id="LabelSettings_jak64"]
font_size = 48
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_i8v43"]
font_size = 33
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_nsbeg"]
font_size = 34
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qstqw"]
font_size = 12
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xvtdb"]
font_size = 34
font_color = Color(0.643137, 0.643137, 0.643137, 1)

[node name="bulletin_board_game" type="Node2D"]
position = Vector2(0, 50)
script = ExtResource("1_i8dud")

[node name="Background" type="ColorRect" parent="."]
offset_top = 80.0
offset_right = 1920.0
offset_bottom = 1032.0
color = Color(0.756863, 0.482353, 0.356863, 1)

[node name="Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 688.0
offset_top = 86.0
offset_right = 1300.0
offset_bottom = 156.0
grow_horizontal = 2
text = "Joint Accreditation Criteria"
label_settings = SubResource("LabelSettings_jak64")
horizontal_alignment = 1

[node name="SubTitle" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 552.0
offset_top = 158.0
offset_right = 1435.0
offset_bottom = 207.0
grow_horizontal = 2
text = "Match the following JAC term spot with their definition"
label_settings = SubResource("LabelSettings_i8v43")
horizontal_alignment = 1

[node name="Item1" type="ColorRect" parent="."]
custom_minimum_size = Vector2(200, 200)
offset_left = 1576.0
offset_top = 118.0
offset_right = 2076.0
offset_bottom = 318.0
scale = Vector2(0.5, 0.5)
color = Color(0.890196, 0.890196, 0.752941, 1)
script = ExtResource("2_nxvow")

[node name="Panel" type="Panel" parent="Item1"]
show_behind_parent = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 500.0
offset_bottom = 200.0
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Item1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.048
anchor_top = 0.1
anchor_right = 0.936
anchor_bottom = 0.91
grow_horizontal = 2
grow_vertical = 2
text = "CE mission for healthcare
skills/performance
impreovement"
label_settings = SubResource("LabelSettings_nsbeg")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Item2" type="ColorRect" parent="."]
custom_minimum_size = Vector2(200, 200)
offset_left = 1576.0
offset_top = 246.0
offset_right = 2076.0
offset_bottom = 446.0
scale = Vector2(0.5, 0.5)
color = Color(0.890196, 0.890196, 0.752941, 1)
script = ExtResource("2_nxvow")

[node name="Panel" type="Panel" parent="Item2"]
show_behind_parent = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 500.0
offset_bottom = 200.0
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Item2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.032
anchor_top = 0.07
anchor_right = 0.98
anchor_bottom = 0.93
grow_horizontal = 2
grow_vertical = 2
text = "Data analysis on CE
mission's impact on
healthcare skills/performace"
label_settings = SubResource("LabelSettings_nsbeg")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Item3" type="ColorRect" parent="."]
custom_minimum_size = Vector2(200, 200)
offset_left = 1576.0
offset_top = 374.0
offset_right = 2076.0
offset_bottom = 574.0
scale = Vector2(0.5, 0.5)
color = Color(0.890196, 0.890196, 0.752941, 1)
script = ExtResource("2_nxvow")

[node name="Panel" type="Panel" parent="Item3"]
show_behind_parent = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 500.0
offset_bottom = 200.0
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Item3"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.902
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 2
text = "Implementing program
changes to enhance
CE mission achievement"
label_settings = SubResource("LabelSettings_nsbeg")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Item4" type="ColorRect" parent="."]
custom_minimum_size = Vector2(200, 200)
offset_left = 1576.0
offset_top = 502.0
offset_right = 2076.0
offset_bottom = 702.0
scale = Vector2(0.5, 0.5)
color = Color(0.890196, 0.890196, 0.752941, 1)
script = ExtResource("2_nxvow")

[node name="Panel" type="Panel" parent="Item4"]
show_behind_parent = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 500.0
offset_bottom = 200.0
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Item4"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.076
anchor_top = 0.12
anchor_right = 0.932
anchor_bottom = 0.87
grow_horizontal = 2
grow_vertical = 2
text = "Incorporating educational
needs to address practice
gaps in IPCE activites"
label_settings = SubResource("LabelSettings_nsbeg")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Item5" type="ColorRect" parent="."]
custom_minimum_size = Vector2(200, 200)
offset_left = 1576.0
offset_top = 630.0
offset_right = 2076.0
offset_bottom = 830.0
scale = Vector2(0.5, 0.5)
color = Color(0.890196, 0.890196, 0.752941, 1)
script = ExtResource("2_nxvow")

[node name="Panel" type="Panel" parent="Item5"]
show_behind_parent = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 500.0
offset_bottom = 200.0
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Item5"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.008
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 2
text = "Creating educational
interventions to enhance
healthcare skills"
label_settings = SubResource("LabelSettings_nsbeg")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Item6" type="ColorRect" parent="."]
custom_minimum_size = Vector2(200, 200)
offset_left = 1576.0
offset_top = 758.0
offset_right = 2076.0
offset_bottom = 958.0
scale = Vector2(0.5, 0.5)
color = Color(0.890196, 0.890196, 0.752941, 1)
script = ExtResource("2_nxvow")

[node name="Panel" type="Panel" parent="Item6"]
show_behind_parent = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 500.0
offset_bottom = 200.0
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Item6"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.008
anchor_top = 0.09
anchor_right = 0.998
anchor_bottom = 0.84
grow_horizontal = 2
grow_vertical = 2
text = "Integrate planning with target
audience-reflective
healthcare professionals"
label_settings = SubResource("LabelSettings_nsbeg")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Item7" type="ColorRect" parent="."]
custom_minimum_size = Vector2(200, 200)
offset_left = 1576.0
offset_top = 886.0
offset_right = 2076.0
offset_bottom = 1086.0
scale = Vector2(0.5, 0.5)
color = Color(0.890196, 0.890196, 0.752941, 1)
script = ExtResource("2_nxvow")

[node name="Panel" type="Panel" parent="Item7"]
show_behind_parent = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 500.0
offset_bottom = 200.0
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Item7"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.1
anchor_right = 0.998
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 2
text = "Designing active learning
to promote team engagement
and desired outcomes"
label_settings = SubResource("LabelSettings_nsbeg")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Item8" type="ColorRect" parent="."]
custom_minimum_size = Vector2(200, 200)
offset_left = 1296.0
offset_top = 246.0
offset_right = 1796.0
offset_bottom = 446.0
scale = Vector2(0.5, 0.5)
color = Color(0.890196, 0.890196, 0.752941, 1)
script = ExtResource("2_nxvow")

[node name="Panel" type="Panel" parent="Item8"]
show_behind_parent = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 500.0
offset_bottom = 200.0
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Item8"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.14
anchor_right = 0.91
anchor_bottom = 0.89
grow_horizontal = 2
grow_vertical = 2
text = "Developing interventons
for healthcare team
competencies"
label_settings = SubResource("LabelSettings_nsbeg")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Item9" type="ColorRect" parent="."]
custom_minimum_size = Vector2(200, 200)
offset_left = 1296.0
offset_top = 374.0
offset_right = 1796.0
offset_bottom = 574.0
scale = Vector2(0.5, 0.5)
color = Color(0.890196, 0.890196, 0.752941, 1)
script = ExtResource("2_nxvow")

[node name="Panel" type="Panel" parent="Item9"]
show_behind_parent = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 500.0
offset_bottom = 200.0
mouse_filter = 2

[node name="Label" type="Label" parent="Item9"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.172
anchor_top = 0.11
anchor_right = 0.87
anchor_bottom = 0.86
grow_horizontal = 2
grow_vertical = 2
text = "Utilizing support
strategies for change
sustainability"
label_settings = SubResource("LabelSettings_nsbeg")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Item10" type="ColorRect" parent="."]
custom_minimum_size = Vector2(200, 200)
offset_left = 1296.0
offset_top = 502.0
offset_right = 1796.0
offset_bottom = 702.0
scale = Vector2(0.5, 0.5)
color = Color(0.890196, 0.890196, 0.752941, 1)
script = ExtResource("2_nxvow")

[node name="Panel" type="Panel" parent="Item10"]
show_behind_parent = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 500.0
offset_bottom = 200.0
mouse_filter = 2

[node name="Label" type="Label" parent="Item10"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.088
anchor_top = 0.15
anchor_right = 0.952
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
text = "Adressing change barriers
in healthcare team
skills/strategy"
label_settings = SubResource("LabelSettings_nsbeg")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Item11" type="ColorRect" parent="."]
custom_minimum_size = Vector2(200, 200)
offset_left = 1296.0
offset_top = 630.0
offset_right = 1796.0
offset_bottom = 830.0
scale = Vector2(0.5, 0.5)
color = Color(0.890196, 0.890196, 0.752941, 1)
script = ExtResource("2_nxvow")

[node name="Panel" type="Panel" parent="Item11"]
show_behind_parent = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 500.0
offset_bottom = 200.0
mouse_filter = 2

[node name="Label" type="Label" parent="Item11"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.048
anchor_top = 0.13
anchor_right = 0.954
anchor_bottom = 0.88
grow_horizontal = 2
grow_vertical = 2
text = "Analyzing healthcare team
and patient outcomes from
IPCE activities"
label_settings = SubResource("LabelSettings_nsbeg")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Item12" type="ColorRect" parent="."]
custom_minimum_size = Vector2(200, 200)
offset_left = 1296.0
offset_top = 758.0
offset_right = 1796.0
offset_bottom = 958.0
scale = Vector2(0.5, 0.5)
color = Color(0.890196, 0.890196, 0.752941, 1)
script = ExtResource("2_nxvow")

[node name="Panel" type="Panel" parent="Item12"]
show_behind_parent = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 500.0
offset_bottom = 200.0
mouse_filter = 2

[node name="Label" type="Label" parent="Item12"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.024
anchor_top = 0.1
anchor_right = 0.974
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 2
text = "Develop compliant activities/
interventions for accredited
CE, ensuring content validity"
label_settings = SubResource("LabelSettings_nsbeg")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="CheckWinButton" type="TextureButton" parent="."]
offset_left = 924.0
offset_top = 502.0
offset_right = 964.0
offset_bottom = 542.0
scale = Vector2(2.75, 2.75)
texture_normal = ExtResource("3_vliwk")

[node name="Label2" type="Label" parent="CheckWinButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.508333
anchor_top = 1.09167
anchor_right = 1.54167
anchor_bottom = 1.59167
text = "Check Answer"
label_settings = SubResource("LabelSettings_qstqw")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Spot1" type="TextureRect" parent="."]
custom_minimum_size = Vector2(200, 200)
offset_left = 96.0
offset_top = 118.0
offset_right = 596.0
offset_bottom = 318.0
scale = Vector2(0.5, 0.5)
expand_mode = 1
script = ExtResource("4_uq88t")

[node name="Panel" type="Panel" parent="Spot1"]
show_behind_parent = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_left = -2.0
offset_right = 498.0
offset_bottom = 200.0
mouse_filter = 2

[node name="Label" type="Label" parent="Spot1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.13
anchor_right = 0.806
anchor_bottom = 0.88
grow_horizontal = 2
grow_vertical = 2
text = "Joint Accreditation
Criteria definition
one"
label_settings = SubResource("LabelSettings_xvtdb")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Spot2" type="TextureRect" parent="."]
custom_minimum_size = Vector2(200, 200)
offset_left = 96.0
offset_top = 246.0
offset_right = 596.0
offset_bottom = 446.0
scale = Vector2(0.5, 0.5)
expand_mode = 1
script = ExtResource("4_uq88t")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="Spot2"]
show_behind_parent = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 500.0
offset_bottom = 200.0
mouse_filter = 2

[node name="Label" type="Label" parent="Spot2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.192
anchor_top = 0.16
anchor_right = 0.798
anchor_bottom = 0.91
grow_horizontal = 2
grow_vertical = 2
text = "Joint Accreditation
Criteria definition
two"
label_settings = SubResource("LabelSettings_xvtdb")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Spot3" type="TextureRect" parent="."]
custom_minimum_size = Vector2(200, 200)
offset_left = 96.0
offset_top = 374.0
offset_right = 596.0
offset_bottom = 574.0
scale = Vector2(0.5, 0.5)
expand_mode = 1
script = ExtResource("4_uq88t")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="Spot3"]
show_behind_parent = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 500.0
offset_bottom = 200.0
mouse_filter = 2

[node name="Label" type="Label" parent="Spot3"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.192
anchor_top = 0.16
anchor_right = 0.798
anchor_bottom = 0.91
grow_horizontal = 2
grow_vertical = 2
text = "Joint Accreditation
Criteria definition
three"
label_settings = SubResource("LabelSettings_xvtdb")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Spot4" type="TextureRect" parent="."]
custom_minimum_size = Vector2(200, 200)
offset_left = 96.0
offset_top = 502.0
offset_right = 596.0
offset_bottom = 702.0
scale = Vector2(0.5, 0.5)
expand_mode = 1
script = ExtResource("4_uq88t")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="Spot4"]
show_behind_parent = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 500.0
offset_bottom = 200.0
mouse_filter = 2

[node name="Label" type="Label" parent="Spot4"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.192
anchor_top = 0.16
anchor_right = 0.798
anchor_bottom = 0.91
grow_horizontal = 2
grow_vertical = 2
text = "Joint Accreditation
Criteria definition
four"
label_settings = SubResource("LabelSettings_xvtdb")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Spot5" type="TextureRect" parent="."]
custom_minimum_size = Vector2(200, 200)
offset_left = 96.0
offset_top = 630.0
offset_right = 596.0
offset_bottom = 830.0
scale = Vector2(0.5, 0.5)
expand_mode = 1
script = ExtResource("4_uq88t")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="Spot5"]
show_behind_parent = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 500.0
offset_bottom = 200.0
mouse_filter = 2

[node name="Label" type="Label" parent="Spot5"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.192
anchor_top = 0.16
anchor_right = 0.798
anchor_bottom = 0.91
grow_horizontal = 2
grow_vertical = 2
text = "Joint Accreditation
Criteria definition
five"
label_settings = SubResource("LabelSettings_xvtdb")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Spot6" type="TextureRect" parent="."]
custom_minimum_size = Vector2(200, 200)
offset_left = 96.0
offset_top = 758.0
offset_right = 596.0
offset_bottom = 958.0
scale = Vector2(0.5, 0.5)
expand_mode = 1
script = ExtResource("4_uq88t")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="Spot6"]
show_behind_parent = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 500.0
offset_bottom = 200.0
mouse_filter = 2

[node name="Label" type="Label" parent="Spot6"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = -68.0
offset_right = 149.0
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2
text = "Joint Accreditation
Criteria definition
six"
label_settings = SubResource("LabelSettings_xvtdb")
horizontal_alignment = 1

[node name="Spot7" type="TextureRect" parent="."]
custom_minimum_size = Vector2(200, 200)
offset_left = 96.0
offset_top = 886.0
offset_right = 596.0
offset_bottom = 1086.0
scale = Vector2(0.5, 0.5)
expand_mode = 1
script = ExtResource("4_uq88t")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="Spot7"]
show_behind_parent = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 500.0
offset_bottom = 200.0
mouse_filter = 2

[node name="Label" type="Label" parent="Spot7"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.192
anchor_top = 0.16
anchor_right = 0.798
anchor_bottom = 0.91
grow_horizontal = 2
grow_vertical = 2
text = "Joint Accreditation
Criteria definition
seven"
label_settings = SubResource("LabelSettings_xvtdb")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Spot8" type="TextureRect" parent="."]
custom_minimum_size = Vector2(200, 200)
offset_left = 376.0
offset_top = 246.0
offset_right = 876.0
offset_bottom = 446.0
scale = Vector2(0.5, 0.5)
expand_mode = 1
script = ExtResource("4_uq88t")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="Spot8"]
show_behind_parent = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 500.0
offset_bottom = 200.0
mouse_filter = 2

[node name="Label" type="Label" parent="Spot8"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.192
anchor_top = 0.16
anchor_right = 0.798
anchor_bottom = 0.91
grow_horizontal = 2
grow_vertical = 2
text = "Joint Accreditation
Criteria definition
eight"
label_settings = SubResource("LabelSettings_xvtdb")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Spot9" type="TextureRect" parent="."]
custom_minimum_size = Vector2(200, 200)
offset_left = 376.0
offset_top = 374.0
offset_right = 876.0
offset_bottom = 574.0
scale = Vector2(0.5, 0.5)
expand_mode = 1
script = ExtResource("4_uq88t")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="Spot9"]
show_behind_parent = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 500.0
offset_bottom = 200.0
mouse_filter = 2

[node name="Label" type="Label" parent="Spot9"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.192
anchor_top = 0.16
anchor_right = 0.798
anchor_bottom = 0.91
grow_horizontal = 2
grow_vertical = 2
text = "Joint Accreditation
Criteria definition
nine"
label_settings = SubResource("LabelSettings_xvtdb")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Spot10" type="TextureRect" parent="."]
custom_minimum_size = Vector2(200, 200)
offset_left = 376.0
offset_top = 502.0
offset_right = 876.0
offset_bottom = 702.0
scale = Vector2(0.5, 0.5)
expand_mode = 1
script = ExtResource("4_uq88t")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="Spot10"]
show_behind_parent = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 500.0
offset_bottom = 200.0
mouse_filter = 2

[node name="Label" type="Label" parent="Spot10"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.192
anchor_top = 0.16
anchor_right = 0.798
anchor_bottom = 0.91
grow_horizontal = 2
grow_vertical = 2
text = "Joint Accreditation
Criteria definition
ten"
label_settings = SubResource("LabelSettings_xvtdb")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Spot11" type="TextureRect" parent="."]
custom_minimum_size = Vector2(200, 200)
offset_left = 376.0
offset_top = 630.0
offset_right = 876.0
offset_bottom = 830.0
scale = Vector2(0.5, 0.5)
expand_mode = 1
script = ExtResource("4_uq88t")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="Spot11"]
show_behind_parent = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 500.0
offset_bottom = 200.0
mouse_filter = 2

[node name="Label" type="Label" parent="Spot11"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.192
anchor_top = 0.16
anchor_right = 0.798
anchor_bottom = 0.91
grow_horizontal = 2
grow_vertical = 2
text = "Joint Accreditation
Criteria definition
eleven"
label_settings = SubResource("LabelSettings_xvtdb")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Spot12" type="TextureRect" parent="."]
custom_minimum_size = Vector2(200, 200)
offset_left = 376.0
offset_top = 758.0
offset_right = 876.0
offset_bottom = 958.0
scale = Vector2(0.5, 0.5)
expand_mode = 1
script = ExtResource("4_uq88t")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="Spot12"]
show_behind_parent = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 500.0
offset_bottom = 200.0
mouse_filter = 2

[node name="Label" type="Label" parent="Spot12"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.192
anchor_top = 0.16
anchor_right = 0.798
anchor_bottom = 0.91
grow_horizontal = 2
grow_vertical = 2
text = "Joint Accreditation
Criteria definition
twelve"
label_settings = SubResource("LabelSettings_xvtdb")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="CheckWinButton" to="." method="_on_check_win_button_pressed" flags=18]
